--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -3,7 +3,7 @@ body, h1, h2, ul, li, a {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial, sans-serif;
+    font-family: "Libre Baskerville", serif;
 }
 
 
