--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Manrope:wght@200..800&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&family=Public+Sans:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+html {
+    font-family: "Libre Baskerville", serif;
+}
 /* Estilização do menu */
 body {
     background-color: var(--secundary-white);
@@ -140,6 +144,10 @@ nav .fa-linkedin:hover  {
     line-height: 30px;
 }
 
+.tecnologias i {
+    font-size: 30px;
+}
+
 /* Estilização dos projetos */
 .projetos {
     padding: 50px 20px;
@@ -164,6 +172,12 @@ nav .fa-linkedin:hover  {
     padding: 20px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
+}
+
+.projeto p {
+    font-size: 10px;
+    text-align: left;
+    padding: 10px 30px;
 }
 
 /* Estilização do rodapé */
