--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -1,3 +1,19 @@
+@media (max-width: 1024px) {
+    .grid {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .hero h1 {
+        font-size: 2rem;
+    }
+
+    .hero p {
+        width: 80%;
+        margin: 50px auto;
+    }
+
+}
+
 @media (max-width: 767px) {
     nav ul {
         flex-direction: row;
