--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -7,11 +7,11 @@
         font-size: 2rem;
     }
 
-    .about {
+    .hero .about {
        height: 30%;
     }
 
-    .about p {
+    .hero .about p {
         width: 60%;
         margin: 50px auto;
         text-align: center;
@@ -51,17 +51,12 @@
         padding: 20px;
     }
 
-    .hero p {
-        width: 450px;
-        margin: 25px auto;
-        text-align: center;
-        font-size: 12px;
-    }
-
     .hero .about p {
+        width: 450px;
         margin: 0 auto;
         padding: 20px 0;
         text-align: center;
+        font-size: 12px;
         line-height: 15px;
     }
 
