adicionado atribuição as linhas 201-205 criado footer ul com display:flex, flex-direction:column

--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -198,4 +198,9 @@
         grid-template-columns: 1fr;
     }
 
+    footer ul {
+        display: flex;
+        flex-direction: column;
+    }
+
 }
