adicionado atribuição a seletor footer p, font-size:6px

--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -198,6 +198,10 @@
         grid-template-columns: 1fr;
     }
 
+    footer p {
+        font-size: 6px;
+    }
+
     footer ul {
         display: flex;
         flex-direction: column;
