linha 8 adicionado a variavel de cor gray

--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -5,6 +5,7 @@
     --secundary-blue: hsl(189, 84%, 52%);
     --primary-white: hsl(0, 0%, 100%);
     --secundary-white: hsl(0, 0%, 98%);
+    --prymary-gray: hsl(60, 7%, 24%);
     --primary-black: hsl(0, 0%, 20%);
     --primary-orange: hsl(22, 94%, 49%);
 }
