--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Manrope:wght@200..800&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&family=Public+Sans:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap');
 
 html {
     font-family: "Libre Baskerville", serif;
@@ -68,6 +68,40 @@ nav .fa-github:hover  {
 
 nav .fa-linkedin:hover  {
     color: var(--primary-blue);
+}
+
+.trilho {
+    width: 50px;
+    height: 25px;
+    margin-top: 4%;
+    background-color: #c3c3c3;
+    border-radius: 150px;
+    position: relative;
+    cursor: pointer;
+}
+/*background: radial-gradient(#c7c7c7, #ffff);*/
+.trilho .indicador {
+    width: 25px;
+    height: 25px;
+    background-color: #fff;
+    border-radius: 50%;
+    transform: scale(.9);
+    position: absolute;
+    left: 0;
+    transition: 0.5s;
+}
+
+.trilho.dark {
+    background-color: #4d4d4d;
+}
+
+.trilho.dark .indicador {
+    left: 24px;
+    background-color: #000;
+}
+
+body.dark {
+    background: radial-gradient(#FF0077, #202020);
 }
 
 /* Estilização do Hero */
@@ -164,7 +198,7 @@ nav .fa-linkedin:hover  {
 }
 
 .projeto {
-    background-color: var(--primary-white);
+    background-color: var(--primary-black);
     padding: 20px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
@@ -174,10 +208,12 @@ nav .fa-linkedin:hover  {
     font-size: 10px;
     text-align: left;
     padding: 10px 30px;
+    color: var(--primary-white);
 }
 
 .projeto h3 {
     margin: 0;
+    color: var(--primary-white);
 }
 
 /* Estilização do rodapé */
